--- a/package.json
+++ b/package.json
@@ -13,26 +13,26 @@
     "@tailwindcss/vite": "^4.1.11",
     "@tanstack/react-query": "^5.81.5",
     "axios": "^1.10.0",
+    "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.3",
     "styled-components": "^6.1.19",
-    "tailwindcss": "^4.1.11",
-    "lucide-react": "^0.263.1"
+    "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.5.2",
+    "autoprefixer": "^10.4.14",
     "eslint": "^9.29.0",
+    "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.2.0",
-    "vite": "^7.0.0",
-    "autoprefixer": "^10.4.14",
     "postcss": "^8.4.27",
-    "eslint-plugin-react": "^7.32.2"
+    "vite": "^7.0.0"
   }
 }
