--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tanstack/react-query": "^5.81.5",
     "axios": "^1.10.0",
     "gsap": "^3.13.0",
+    "lenis": "^1.3.4",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-countup": "^6.5.3",
